[project]
name = "RedBot"
version = "0.1.0"
description = "一个使用 Graia Ariadne 搭建的 QQ 机器人"
authors = [
    { name = "Redlnn", email = "w731347477@gmail.com" },
]
dependencies = [
    "aio-mc-rcon>=3.2.0",
    "aiofile>=3.8.1",
    "aiohttp[speedups]>=3.8.3",
    "aiomysql>=0.1.1",
    "aiosqlite>=0.18.0",
    "graia-ariadne[full]>=0.10.2",
    "graiax-fastapi>=0.2.1",
    "graiax-playwright>=0.2.1",
    "graiax-shortcut>=0.2.1",
    "graiax-text2img-playwright>=0.3.0",
    "jieba>=0.42.1",
    "jinja2>=3.1.2",
    "lxml>=4.9.2",
    "numpy>=1.24.1",
    "orjson>=3.8.3",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=9.3.0",
    "psutil>=5.9.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.5",
    "qrcode>=7.3.1",
    "sqlmodel>=0.0.8",
    "uvicorn[standard]>=0.20.0",
    "wordcloud>=1.8.2.2",
    "kayaku>=0.5.1",
]
requires-python = ">=3.10,<3.11"
license = { text = "AGPL-3.0-only" }
readme = "README.md"

[project.urls]
repository = "https://github.com/Redlnn/redbot"

[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort",
    "black",
    "flake8",
    "pip",
    "wheel",
    "setuptools",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 120
target-version = ["py310"]
skip-string-normalization = true
safe = true

[tool.isort]
profile = "black"
