[project]
name = "RedBot"
version = "0.1.0"
description = "一个使用 Graia Ariadne 搭建的 QQ 机器人"
authors = [
    { name = "Redlnn", email = "w731347477@gmail.com" },
]
dependencies = [
    "aiofile>=3.8.7",
    "aiohttp[speedups]>=3.8.5",
    "asyncmy>=0.2.8",
    "aiosqlite>=0.19.0",
    "graia-ariadne[full]>=0.11.7",
    "graiax-fastapi>=0.3.0",
    "graiax-playwright>=0.2.7",
    "graiax-shortcut>=0.3.0",
    "graiax-text2img-playwright>=0.4.2",
    "lxml>=4.9.3",
    "orjson>=3.9.5",
    "pillow>=10.0.0",
    "psutil>=5.9.5",
    "qrcode>=7.4.2",
    "sqlalchemy[asyncio]>=2.0.20",
    "uvicorn[standard]>=0.23.2",
    "kayaku>=0.5.2",
]
requires-python = ">=3.10,<4.0"
license = { text = "AGPL-3.0-only" }
readme = "README.md"

[project.urls]
repository = "https://github.com/Redlnn/redbot"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 120
target-version = ["py310"]
skip-string-normalization = true
safe = true

[tool.isort]
profile = "black"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "pip>=23.2.1",
    "wheel>=0.41.1",
    "setuptools>=68.1.0",
]
